# xdg-desktop-portal

./: meson.build  meson_options.txt
doc/: index.rst  meson.build
document-portal/: meson.build
